Fix overlapping proposals support

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -117,3 +117,13 @@ background: $secondary-brand;
   }
 }
 
+.topless{
+  top: auto !important
+}
+
+@media print, screen and (min-width: 40em){
+  .topless{
+    top: 0px !important
+  }
+}
+
